@@ -1,9 +1,10 @@
 package io.github.deepeshpatel.jnumbertools.generator.permutation;
 
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Assertions;
 
 import java.util.Arrays;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static io.github.deepeshpatel.jnumbertools.TestBase.permutation;
@@ -11,68 +12,66 @@ import static io.github.deepeshpatel.jnumbertools.TestBase.permutation;
 public class CommonTest {
 
     @Test
-    public void all3MthPermutationGeneratorsShouldGenerateSameOutputForSpecialCase(){
+    void all3MthPermutationGeneratorsShouldGenerateSameOutputForSpecialCase() {
+        for (int size = 1; size <= 5; size++) {
+            for (int increment = 1; increment <= 4; increment++) {
 
-        for(int size=1; size<=5; size++) {
-            for(int increment = 1; increment<=4; increment++) {
-
-                var elements = IntStream.range(0, size).boxed().toList();
+                var elements = IntStream.range(0, size).boxed().collect(Collectors.toList());
                 int[] freq = new int[elements.size()];
-                Arrays.fill(freq,1);
+                Arrays.fill(freq, 1);
 
-                String uniquePermutationValues = permutation.unique(size).
-                        lexOrderMth(increment, 0).stream().toList().toString();
+                String uniquePermutationValues = permutation.unique(size)
+                        .lexOrderMth(increment, 0).stream().toList().toString();
 
                 String multisetPermutationValues = permutation.multiset(elements, freq)
                         .lexOrderMth(increment, 0)
                         .stream().toList().toString();
 
-                String kPermutationValues = permutation.nPk(size,size)
+                String kPermutationValues = permutation.nPk(size, size)
                         .lexOrderMth(increment, 0)
                         .stream().toList().toString();
 
-                Assert.assertEquals(uniquePermutationValues, multisetPermutationValues);
-                Assert.assertEquals(uniquePermutationValues, kPermutationValues);
+                Assertions.assertEquals(uniquePermutationValues, multisetPermutationValues);
+                Assertions.assertEquals(uniquePermutationValues, kPermutationValues);
             }
         }
     }
 
     @Test
-    public void all3NextPermutationGeneratorsShouldGenerateSameOutputForSpecialCase(){
+    void all3NextPermutationGeneratorsShouldGenerateSameOutputForSpecialCase() {
+        for (int size = 1; size <= 5; size++) {
 
-        for(int size=1; size<=5; size++) {
-
-            var elements = IntStream.range(0, size).boxed().toList();
+            var elements = IntStream.range(0, size).boxed().collect(Collectors.toList());
             int[] freq = new int[elements.size()];
-            Arrays.fill(freq,1);
+            Arrays.fill(freq, 1);
 
-                String uniquePermutationValues = permutation.unique(size).
-                        lexOrder().stream().toList().toString();
+            String uniquePermutationValues = permutation.unique(size)
+                    .lexOrder().stream().toList().toString();
 
-                String multisetPermutationValues = permutation.multiset(elements, freq)
-                        .lexOrder()
-                        .stream().toList().toString();
+            String multisetPermutationValues = permutation.multiset(elements, freq)
+                    .lexOrder()
+                    .stream().toList().toString();
 
-                String kPermutationValues = permutation.nPk(size, size)
-                        .lexOrder()
-                        .stream().toList().toString();
+            String kPermutationValues = permutation.nPk(size, size)
+                    .lexOrder()
+                    .stream().toList().toString();
 
-                Assert.assertEquals(uniquePermutationValues, multisetPermutationValues);
-                Assert.assertEquals(uniquePermutationValues, kPermutationValues);
+            Assertions.assertEquals(uniquePermutationValues, multisetPermutationValues);
+            Assertions.assertEquals(uniquePermutationValues, kPermutationValues);
         }
     }
 
     @Test
-    public void all6LexOrderPermutationGeneratorsShouldGenerateSameOutputForSpecialCase(){
-        for(int size=1; size<=3; size++) {
+    void all6LexOrderPermutationGeneratorsShouldGenerateSameOutputForSpecialCase() {
+        for (int size = 1; size <= 3; size++) {
             int increment = 1;
 
-            var elements = IntStream.range(0, size).boxed().toList();
+            var elements = IntStream.range(0, size).boxed().collect(Collectors.toList());
             int[] freq = new int[elements.size()];
-            Arrays.fill(freq,1);
+            Arrays.fill(freq, 1);
 
-            String uniquePermutationMth = permutation.unique(size).
-                    lexOrderMth(increment, 0).stream().toList().toString();
+            String uniquePermutationMth = permutation.unique(size)
+                    .lexOrderMth(increment, 0).stream().toList().toString();
 
             String multisetPermutationMth = permutation.multiset(elements, freq)
                     .lexOrderMth(increment, 0)
@@ -82,8 +81,8 @@ public class CommonTest {
                     .lexOrderMth(increment, 0)
                     .stream().toList().toString();
 
-            String uniquePermutation = permutation.unique(size).
-                    lexOrderMth(increment, 0).stream().toList().toString();
+            String uniquePermutation = permutation.unique(size)
+                    .lexOrderMth(increment, 0).stream().toList().toString();
 
             String multisetPermutation = permutation.multiset(elements, freq)
                     .lexOrder()
@@ -93,11 +92,11 @@ public class CommonTest {
                     .lexOrder()
                     .stream().toList().toString();
 
-            Assert.assertEquals(uniquePermutation, uniquePermutationMth);
-            Assert.assertEquals(uniquePermutation, kPermutation);
-            Assert.assertEquals(uniquePermutation, kPermutationMth);
-            Assert.assertEquals(uniquePermutation, multisetPermutation);
-            Assert.assertEquals(uniquePermutation, multisetPermutationMth);
+            Assertions.assertEquals(uniquePermutation, uniquePermutationMth);
+            Assertions.assertEquals(uniquePermutation, kPermutation);
+            Assertions.assertEquals(uniquePermutation, kPermutationMth);
+            Assertions.assertEquals(uniquePermutation, multisetPermutation);
+            Assertions.assertEquals(uniquePermutation, multisetPermutationMth);
         }
     }
 }
